...

                Image(systemName: "chevron.down")
                    .darkLightThemeColor()
                    .padding(.vertical, 2)
            }
        }
        .accessibilityIdentifier("TableMultiSelectionFieldIdentifier")
        .padding(8)
        .background(selectedOptionColor)
        .cornerRadius(16)
        .padding(.horizontal, 8)
        .shadow(
          color: (colorScheme == .dark ? .white.opacity(0.4) : .black.opacity(0.12)),
...
                        .frame(width: 88, height: 27)
                        .overlay(
                            RoundedRectangle(cornerRadius: 6)
                                .stroke(Color.allFieldBorderColor, lineWidth: 1)
                        )
                })
                .accessibilityIdentifier("TableMultiSelectionFieldApplyIdentifier")

                Button(action: {
                    presentationMode.wrappedValue.dismiss()
                }, label: {
                    ZStack {
                        RoundedRectangle(cornerRadius: 6)
...
                Spacer()
            }
            .padding(.horizontal, 16)
            .padding(.vertical, 8)
            .background(color)
        })
        .accessibilityIdentifier("TableMultiSelectOptionsSheetIdentifier")
        .accessibilityValue(Text(isSelected ? "Selected" : "Not selected"))
        .frame(maxWidth: .infinity)
    }
}

//Select only one choice
...
